--- a/text/content.tex
+++ b/text/content.tex
@@ -1,27 +1,35 @@
 %% content.tex
 %%
 
-%% ==============
+\chapter{Status Quo}
+In diesem Kapitel wollen wir den aktuellen Stand der Dinge vorstellen. Hierbei beziehen wir uns auf das Thema Lernen und Online-Hilfe. Welche Konzepte gibt es hierbei bereits und wie wurden diese angenommen.
+
+\section{Lernen}
+\subsection{Problembasiertes Lernen}
+\subsection{Differenziells Lernen}
+
+\section{Online-Hilfe}
+
+
 \chapter{Grundlagen}
+\section{Gamification}
+
+\section{Recommendersysteme}
+
+%% ==============
+\chapter{Adaption}
 \label{ch:Content1}
 %% ==============
 
 \section{Adaption}
 Klärung des Begriffes Adaption. Was bedeutet Adaption auf die Software bezogen.
 
+\section{Adaption in unserer Arbeit}
 
-%% ===========================
-\subsection{Adaption auf den Nutzer}
-\label{ch:Content1:sec:Section1}
-%% ===========================
 Hinleitung der Adaption auf den Nutzer. Wie kommen wir zum Nutzer?
 \dots
 
-\section{Gamification}
 
-\section{Problembasiertes Lernen}
-
-\section{Recommendersysteme}
 
 
 %% ===========================
