--- a/thesis.tex
+++ b/thesis.tex
@@ -37,11 +37,7 @@
 \newcommand{\mytype}{\iflanguage{english}{Seminar Thesis}{Seminararbeit}} % (Seminar|Bachelor|Master) Thesis
 \newcommand{\myname}{Jeremy Schmidt, Dane Leube}
 \newcommand{\mytitle}{\iflanguage{english}{Title}{Adaptive Online-Lernhilfe}}
-\newcommand{\myinstitute}{\iflanguage{english}
-{Institute of ... \\
-...}
-{Institut für Wirtschaftswissenschaften \\
-...}}
+\newcommand{\myinstitute}{Lehrstuhl der Systeme für Informationsverwaltung }
 
 \newcommand{\advisor}{Dr. Simone Braun}
 \newcommand{\advisortwo}{Tatjana Streit}  %Comment this line if there is no second advisor
