--- a/titlepage.tex
+++ b/titlepage.tex
@@ -33,7 +33,7 @@
 		\vspace*{1cm}
 		\Large{
 			\iflanguage{english}{At the Department of ...}			
-							    {An der Fakult\"at f\"ur W...}
+							    {An der Fakult\"at f\"ur Informatik}
 			\\
 			\myinstitute
 		}
