--- a/thesis.bib
+++ b/thesis.bib
@@ -9,3 +9,20 @@
   publisher = {Elsevier Science Inc.},
   url = {http://dx.doi.org/10.1016/j.jss.2008.03.066}
 }
+
+@book{zumbachproblembasiertes,
+  title={Problembasiertes Lernen},
+  author={Zumbach, J.},
+  isbn={9783830963332},
+  url={https://books.google.de/books?id=X47DrRaHJNkC},
+  publisher={Waxmann Verlag}
+}
+
+@Article{differenziellesLernen,
+  author =       {Wolfgang I. Schöllhorn, Hendrik Beckmann, Daniel Janssen, Maren Michelbrink},
+  title =        {Differenzielles Lehren und Lernen im Sport},
+  year = 	2009,
+  month=	Februar,
+  url=http://www.hofmann-verlag.de/project/zs_archiv/archiv/sportunterricht/2009/sportunterricht-Ausgabe-Februar-2009.pdf#page=6
+   publisher =    {Sportunterricht Magazin},
+}
