--- a/thesis.bib
+++ b/thesis.bib
@@ -26,3 +26,11 @@
   url=http://www.hofmann-verlag.de/project/zs_archiv/archiv/sportunterricht/2009/sportunterricht-Ausgabe-Februar-2009.pdf#page=6
    publisher =    {Sportunterricht Magazin},
 }
+
+@Misc{recommender,
+OPTauthor = {Prof. Dr. Andreas Geyer-Schulz},
+OPTtitle = {Recommendersysteme - Einführung},
+OPThowpublished = {Foliensatz zur Vorlesung Recommendersysteme},
+
+}
+
