next iteration. last for today

--- a/thesis.bib
+++ b/thesis.bib
@@ -21,16 +21,43 @@
 @Article{differenziellesLernen,
   author =       {Wolfgang I. Schöllhorn, Hendrik Beckmann, Daniel Janssen, Maren Michelbrink},
   title =        {Differenzielles Lehren und Lernen im Sport},
-  year = 	2009,
-  month=	Februar,
-  url=http://www.hofmann-verlag.de/project/zs_archiv/archiv/sportunterricht/2009/sportunterricht-Ausgabe-Februar-2009.pdf#page=6
+  year = 	{2009},
+  month=	{Februar},
+  url={http://www.hofmann-verlag.de/project/zsarchiv/archiv/sportunterricht/2009/sportunterricht-Ausgabe-Februar-2009.pdf#page=6}
    publisher =    {Sportunterricht Magazin},
 }
 
 @Misc{recommender,
 OPTauthor = {Prof. Dr. Andreas Geyer-Schulz},
 OPTtitle = {Recommendersysteme - Einführung},
-OPThowpublished = {Foliensatz zur Vorlesung Recommendersysteme},
+OPThowpublished = {Foliensatz zur Vorlesung Recommendersysteme}
+}
 
+@Article{gamification,
+  author =       {Bendel, P. D. O.},
+  title =        {Gamification},
+  year = 	{2015},
+  url={http://wirtschaftslexikon.gabler.de/Archiv/688938796/gamification-v4.html}
+}
+
+@Article{dud1,
+  author =       {Duden},
+  title =        {adaptieren},
+  year = {2015},
+  url={http://www.duden.de/node/687662/revisions/1384857/view}
+}
+
+@Article{dud2,
+  author =       {Duden},
+  title =        {Onlinehilfe},
+  year = 	{2015},
+  url={http://www.duden.de/node/769414/revisions/1344323/view}
+}
+
+@Article{dud3,
+  author =       {Duden},
+  title =        {Lernhilfe},
+  year = {2015},
+  url={http://www.duden.de/node/733105/revisions/1232018/view}
 }
 
