--- a/text/content.tex
+++ b/text/content.tex
@@ -22,17 +22,17 @@ Um ein besseres Verständnis dieser Arbeit zu gewährleisten, sind gewisse Grund
 \section{Online-Lernhilfe}
 Wir werden eine kurze Begriffsdefinition geben und anschließend die Verwendung in unserer Arbeit erläutern. Dies hilft beim Verständnis des Problems.
 \subsection{Begriffsdefinition}
-Die Online-Lernhilfe setzt sich aus zwei Begriffen zusammen, der Online-Hilfe und der Lernhilfe. Die Online-Hilfe bezeichnet eine „\textit{Hilfefunktion, die nur über eine direkte Verbindung mit dem Internet genutzt werden kann}“ (Duden, 2015). Die Lernhilfe beschreibt eine „\textit{Hilfe, Mittel oder Anhaltspunkt beim Lernen von etwas}“ (Duden, 2015). Somit ist die Online-Lernhilfe eine Hilfe, Mittel oder Anhaltspunkt, die eine Verbindung mit dem Internet voraussetzt.
+Die Online-Lernhilfe setzt sich aus zwei Begriffen zusammen, der Online-Hilfe und der Lernhilfe. Die Online-Hilfe bezeichnet eine „\textit{Hilfefunktion, die nur über eine direkte Verbindung mit dem Internet genutzt werden kann}“ \cite{dud1}. Die Lernhilfe beschreibt eine „\textit{Hilfe, Mittel oder Anhaltspunkt beim Lernen von etwas}“ \cite{dud2}. Somit ist die Online-Lernhilfe ein Hilfe-, Mittel- oder Anhaltspunkt, der eine Verbindung mit dem Internet voraussetzt.
 
 \subsection{Verwendung in der Arbeit}
 Unter Online-Hilfen verstehen wir die klassischen Hilfsmodule von Software. Diese bietet dem Nutzer Hilfe zu einem bestimmten Themengebiet in der Software. Die klassische Form ist ein Handbuch das zu der Software beigelegt wird. Dieses Handbuch erklärt die Software mit ihren Funktionen. Früher waren die Handbücher sehr umfangreich, so dass man zuerst mehrere Seiten dieses Handbuch lesen musste, um die Software überhaupt erst verstehen zu können. Heutzutage sind die Benutzeroberflächen vereinfacht, so dass die Software im Idealfall selbsterklärend ist und keine weitere Hilfestellung notwendig. Das Software immer mehr Prozesse abbilden kann, wird die Komplexität einer Software jedoch immer zunehmen. Damit die Komplexität weiterhin von einem User bedient werden kann, muss er zum einen neue Bedienelemente einer Software lernen und zum Anderen eine schnelle Hilfe erhalten, wenn er an einem bestimmten Punkt in der Software nicht weiterkommt.
 
 \section{Adaption}
 \label{ch:Content1}
-Wie aus dem Titel unserer Arbeit ersichtlich, benötigen wir eine Definition des Adaptions-Begriffs.
+Wie aus dem Titel unserer Arbeit ersichtlich, benötigen wir eine Definition des Adaptions-Begriffs, um unsere Arbeitsgebiete klar abzugrenzen.
 
 \subsection{Begriffserläuterung}
-Unter dem Begriff Adaption, welcher von dem lateinischen Wort „\textit{adaptare}“ stammt und „\textit{anpassen}“ bzw. „\textit{passend}“ herrichten (Duden, 2015) bedeutet, versteht man die Anpassung eines Objekts an einen Zweck. 
+Unter dem Begriff Adaption, welcher von dem lateinischen Wort „\textit{adaptare}“ stammt und „\textit{anpassen}“ bzw. „\textit{passend}“ herrichten \cite{dud3} bedeutet, versteht man die Anpassung eines Objekts an einen Zweck. 
 
 \section{Adaption an den Nutzer}
 Der Begriff der Adaption ist sehr breit auf den Bereich Online-Lernhilfe anwendbar. Eine Adaption ist deshalb an sehr vielen Stellen möglich. Aus diesem Grund wurde in Absprache mit den Betreuern festgestellt, dass die Lösungsvorschläge nur eine Adaption an den Nutzer beinhalten sollen.Eine Adaption an verschiedene Endgeräte, wie Tablets, Smartphones oder Computer sollen deshalb aus der Betrachtung und Bewertung ausgeschlossen werden. Lösungsvorschläge, welche im Verlauf der Arbeit vorgestellt werden und adaptiv sind, stellen folglich ausschließlich eine Anpassung an den Nutzer dar. Darunter kann man sich zum Beispiel einen grafisch aufgearbeiteten Hilfetext für den Benutzer der Software vorstellen, der sich dynamisch an den derzeit verwendeten Teil der Software anpasst.
@@ -40,7 +40,7 @@ Der Begriff der Adaption ist sehr breit auf den Bereich Online-Lernhilfe anwendb
 \section{Gamification}
 Als zweite Grundlage haben wir den Ansatz Gamification. Dieser ist für unsere Erläuterung sehr wichtig und wird deshalb im Folgenden aufgeführt.
 \subsection{Definition}
-„\textit{Gamification ist die Übertragung von spieltypischen Elementen und Vorgängen in spielfremde Zusammenhänge mit dem Ziel der Verhaltensänderung und Motivationssteigerung bei Anwenderinnen und Anwendern. Zu den spieltypischen Elementen gehören Beschreibungen (Ziele, Beteiligte, Regeln, Möglichkeiten), Punkte, Preise und Vergleiche. Zu den spieltypischen Vorgängen zählt die Bewältigung von Aufgaben durch individuelle oder kollaborative Leistungen.}“ (Bendel, 2015)
+„\textit{Gamification ist die Übertragung von spieltypischen Elementen und Vorgängen in spielfremde Zusammenhänge mit dem Ziel der Verhaltensänderung und Motivationssteigerung bei Anwenderinnen und Anwendern. Zu den spieltypischen Elementen gehören Beschreibungen (Ziele, Beteiligte, Regeln, Möglichkeiten), Punkte, Preise und Vergleiche. Zu den spieltypischen Vorgängen zählt die Bewältigung von Aufgaben durch individuelle oder kollaborative Leistungen.}“ \cite{gamification}
 
 \subsection{Verwendung in unserer Arbeit}
 Da es sich bei unseren Lösungsvorschlägen hauptsächlich um verschiedene Arten von Hilfen für ein konkretes Problem handelt, verwenden wir nur einen Teil aus dem Bereich des Gamification in unseren Lösungsvorschlägen. Es handelt sich bei dem verwendeten Teil um die spieltypischen Elemente, wie Punkte, Preise und Vergleiche und die spieltypischen Vorgänge. Wie diese dann konkret in unseren Lösungsvorschlägen verwendet werden, lässt sich im Kapitel der Lern-App nachlesen.
@@ -82,7 +82,7 @@ Eine weitere Rolle, die nicht missachtet werden sollte sind die Administratoren 
 Nachdem die einzelnen Nutzerrollen vorgestellt wurden, werden wir eine Klassifizierung vornehmen um für die klassifizierten Nutzergruppen die passenden Lösungsansätze vorstellen zu können. Die Klassifizierung erfolgte anhand der in Abbildung \ref{img1:userRoles} sichtbaren Kriterien: Nutzunghäufigkeit (Powernutzer, Gelegenheitsnutzer) und Art der Nutzung (effektive Nutzer, informationsorientierte Nutzer und schnelle Nutzung). Diese Kriterien haben wir den jeweiligen Rollen zugeordnet. Durch die Verknüpfung in einem ungerichteten Graphen sind wir zu der Nutzerklassifizierung gekommen. Die Nutzerklassen werden wir im folgenden erläutern.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[width = 0.8\textwidth]{Nutzerrollen.png}
+\includegraphics[width = 0.95\textwidth]{Nutzerrollen.png}
 \caption{Nutzerrollen mit einer Bewertung anhand von Kriterien}
 \label{img1:userRoles}
 \end{center}
@@ -96,27 +96,60 @@ Diese Nutzergruppe verwendet die Software meist jeden Tag und dies mehrere Stund
 Die Studenten erhalten bei uns eine extra Klasse. Sie setzen die Software sehr sporadisch ein und möchten nicht viel neue Inhalte lernen, da sie schon mit anderen Themen ihres Studiums sehr beschäftigt sind. Wenn sie die Software verwenden, dann möchten sie nicht viel neue Inhalte lernen. Wenn überhaupt, dann mit Spaß verbunden. Sie benötigen somit eine extra Motivation um neue Inhalte der Software zu lernen. Weiterhin schwierig bei dieser Nutzergruppe ist die Diversität der Nutzertypen. Dies bedeutet, dass viele verschiedene Fachbereiche, von sehr technisch versierten Leuten wie Ingenieursstudiengänge bis stark intellektuelle Studiengänge wie Germanistik oder Jura bedient werden müssen. Diese starke Diversität veranlasst uns die Gruppe der Studenten als extra Klasse zu betrachten. 
 
 
-
-
-
 %% content.tex
 %%
 
 %% ==============
 \chapter{Lösungsansätze}
+Dieses Kapitel widmet sich den Lösungsansätzen, die als Grundlage für unsere abschließende Empfehlung dienen. Es handelt sich dabei um verschiedene Ansätze, die aufgrund unserer Nutzerklassifizierung und deren Ziele entstanden sind.
+\section{Klassische Hilfe}
+Das klassische Hilfesystem soll unserer Klasse der Problemorientierten Nutzer weiterhelfen. Durch eine schnelle Lösungsfindung und Aufbereitung soll dem Nutzer geholfen werden.
 
-\section{Klassische Online-Hilfe}
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[width = 0.95\textwidth]{onlineHilfe.png}
+\caption{Klassischer Aufbau eines Hilfesystems}
+\label{img1:userRoles}
+\end{center}
+\end{figure} 
+\subsection{Erläuterung}
+Die klassische Hilfe entspricht, wie der Name bereits vermuten lässt, einem Hilfesystem wie man es bereits aus mehreren Programmen kennt. Ein Hilfesystem ist die „\textit{Gesamtheit an Informationen, die gegeben werden, um dem Benutzer beim Umgang mit [Anwendungs]programmen zu helfen}“ (Duden, 2015). Es handelt sich im Falle der Abbildung um ein Handbuch welches online abgerufen werden kann. Der Inhalt der Hilfe wird als grafisch aufbereiteter Text dargestellt und mit Bildausschnitten aus dem Programm ergänzt. Die aufgerufene Hilfeseite wird wie in Abbildung \ref{img2:helpSystem} auf der rechten Seite des Fensters dargestellt. Die linke Seite des Fensters enthält die einzelnen Hilfeseiten, nach Inhalt in diverse Kategorien geordnet. Eine Indexierung der Hilfeseiten ist ebenfalls vorhanden und lässt sich über einen weitere Registerkarte im linken Bereich einblenden. Die Suchfunktion nach Inhalt oder Indexeinträgen befindet sich in der Kopfzeile des Fensters. Diese Form der Hilfe bietet die Möglichkeit zu einem konkreten Problem die genaue Lösung zu erhalten.
 
 \section{Lernspiel-App}
+Der zweite Lösungsansatz soll eine Lösung in Form einer sogenannten Lernspiel-App aufzeigen. Zuerst wird eine Begriffsdefinition von App durchgeführt bevor die konkrete Lösung vorgestellt wird.
+
+\subsection{App}
+Der App-Begriff bezieht sich in unserer Arbeit auf einen kleinen Prozess, der mit einer Software durchgeführt werden kann. Dieses Prinzip kann man am Besten anhand von Unix-Systemen erklären. Hier gibt es für jedes kleine Teilproblem, welches bei der Verwendung eines Computers eintritt ein extra Programm. Dieses Programm macht genau die Aufgabe, die es soll und keine zusätzlichen Extra-Funktionen. Ein gutes Beispiel ist ein Texteditor. Bei einer grafischen Oberfläche beherrscht dieser beispielsweise die Funktion suchen und ersetzen. Weiterhin kann der Editor beispielsweise bestimmte Textfelder rot markieren und eine Datei von dem geschriebenen anlegen. In einer Unix-Konsole gäbe es für alle diese Funktionen einen extra Befehl, der genau diese eine Funktion erfüllt. Dies hat den Vorteil, dass sehr effizient gearbeitet werden kann. Dieses Prinzip verwenden die modernen Apps auf dem Smartphone ebenfalls. Für jeden Anwendungsfall gibt es genau eine App. Das Smartphone besitzt somit eine Ansammlung mehrerer Apps zur Lösung von mehreren Teilproblemen. Eine solche Plattform ist in Abbildung \ref{img1:smartDesign} abgebildet. Auf der linken Seite befinden sich die Icons von mehreren Apps. Auf der rechten Seite ist der konkrete Prozessworkflow, in diesem Beispiel eine Kontaktliste sichtbar. 
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[width = 0.95\textwidth]{smartDesign.png}
+\caption{App-Plattform und Prozessworkflow einer App}
+\label{img1:smartDesign}
+\end{center}
+\end{figure} 
+
+\subsection{Lernspiel}
+Unter einem Lernspiel verstehen wir die Verknüpfung von Gamification-Ansätzen mit dem Erlernen von neuen Inhalten. Hier sind Konzepte für ein umfangreiches Belohnungssystem von Interesse. Ein Nutzer kann eine Belohnung erhalten wenn er eine bestimmte Aufgabe lösen kann. Diese Aufgabe bezieht sich immer auf das Software-Feld. Hierzu erhält der Nutzer ein gezieltes Problem, welches er eventuell auf verschiedenen Wegen lösen kann. Dieser Prozess des Lernens soll durch eine Belohnung am Ende motiviert werden. Erreicht der Nutzer ein bestimmtes Lernziel, so erhält er beispielsweise einen sogenannten Badge (kleine Auszeichnung) oder erreicht das nächste Level, wo ihm ein komplexeres Problem erwartet. 
+
+\subsection{Lösungsansatz}
+Die Verbindung vom App-Prinzip mit dem Lernspiel soll unser zweiter Lösungsansatz repräsentieren. Das daraus folgende Konzept soll eine App designen, die komplexe Inhalte unserer Software in einem Spiel aufbereitet. Dieses Spiel besteht aus mehreren Leveln, die unterschiedliche Komplexitätsgrade beherbergen. Der Schwierigkeitsgrad der Lernspiel-App hängt von den Erfahrungen des Nutzers ab, der das Spiel durchführt. Wenn keine Erfahrungen von seitens des Nutzers bestehen, so fängt er bei der einfachsten Problemstellung an und arbeitet sich durch mehrere Levels. Hierbei muss aufgepasst werden, dass der ganze Ansatz nicht zu verspielt ist, da die problembasierten Nutzer sich nicht lange mit so einem simplen Spiel aufhalten wollen. Für die Studentengruppe hingegen soll der Spaß im Vordergrund stehen weshalb eine spannende Aufbereitung der Inhalte wichtig ist. Damit die effektiven Nutzer bedient werden können, muss die Lernspiel-App viele Problemstellungen innerhalb der Software behandeln und möglichst viele Levels anbieten.
+
 
 \section{Expertensystem}
-\label{ch:Content2}
-%% ==============
-
+Unser sogenanntes Expertensystem beruht auf einem Recommendersystem. Es soll, wie in einem Recommender, Empfehlungen von Nutzern generieren. Diese Empfehlungen werden direkt von einem Nutzer zum Nächsten weitergegeben. Wichtig hierbei ist die Identifikation des Experten der die Empfehlungen abgibt. Diese Identifikation soll anhand der Lernspiel-App erfolgen. Wer hier gut abschneidet, also eine schnelle und effektive Lösung für das gestellte Problem findet, der kann sich durch Badges einen Expertenstatus erarbeiten. Dieser Status gilt immer für einen bestimmten Bereich der Software, also einer App und einem dazugehörigen Workflow. Der Lösungsansatz muss die Information, wer ein solcher Experte für einen bestimmten Bereich ist, bereitstellen. Unsere Recommender-Empfehlung besteht aus der Anzeige eines Experten für einen bestimmten Bereich innerhalb der Software. Aufgrund dieser Anzeige kann ein Nutzer, der gerade Hilfe benötigt den Experten identifizieren und ihn um Rat bitten. Diese Frage kann er dann entweder per E-Mail oder direkt per Telefon durchführen. Eine weitere Möglichkeit zum Erlangen des Expertenstatus kann durch das Manuelle Einstellen durch einen Administrator sein, der im Backend dies einstellt.
 
 
 \chapter{Empfehlung}
+Unsere abschließende Empfehlung soll die Lösungsansätze anhand der Nutzerklassen und unserer Kriterien bewerten. Hierzu erfolgt jeweils eine Gegenüberstellung.
+\section{Bewertung der Lösungsansätze anhand der Nutzerklassen}
+\section{Bewertung der Lösungsansätze anhand der Kriterien}
 
-\chapter{Zusammenfassung mit Fazit}
+\section{Konkrete Empfehlung}
+
+\chapter{Zusammenfassung}
+Die Aufgabe dieser Seminararbeit war es, ein adaptives Online-Hilfesystem zu entwickelt. Gestartet haben wir mit der Frage nach der Adaption. Hier haben wir uns, durch die Vorgabe unserer Betreuer, auf die Adaption an den Nutzer konzentriert. Nachdem wir alle Nutzerrollen aufgezeigt haben, konnten wir eine Klassifizierung der Nutzer durchführen. Diese Klassifizierung hat uns geholfen auf den Nutzer passende Lösungsansätze zu entwickeln. Diese sind durch verschiedene Grundlagen des problembasierten und differenziellen Lernens entstanden. Weiterhin konnten wichtige Ansätze der Gamification in einer App-Lösung erarbeitet werden. Eine weitere Lösung ist durch eine Recommendersystem-Grundlage entstanden. Damit ein besserer Vergleich stattfinden konnte, wurde die bisherige Lösung eines klassischen Hilfesystems vorgestellt. In der folgenden Gegenüberstellung der Lösungsansätze wurden die Lösungen zuerst mit den Nutzerklassen und anschließend nach unseren selbst auferlegten Kriterien bewertet. Die daraus folgende Bewertung hat gezeigt, dass eine Kombination von allen drei Lösungsansätzen sinnvoll ist und durchgeführt werden kann.
+
+\subsection{Ausblick}
+Für eine konkrete Ausarbeitung unserer Empfehlung ist eine Ausarbeitung eines Konzeptes basierend auf unseren Lösungsansätzen der nächste Schritt. Die aufgezeigten Konzepte sollen hierbei in einen konkreten Software-Workflow implementiert werden, so dass eine Lernspiel-App entstehen kann. Das Ziel dieser App soll es sein, die Nutzer zu schulen und ihnen neue Lerninhalte der Software zu vermitteln. Weiterhin sollen, darauf aufbauend, führende Experten identifiziert werden, die anderen Nutzern bei konkreten Problemen bei der Verwendung der Software schnell weiterhelfen können.
 
 
