--- a/text/content.tex
+++ b/text/content.tex
@@ -54,10 +54,6 @@ Ein Teil unseres Lösungsansätzes verwendet ein Recommendersystem.
 In unserer Arbeit wollen wir die Recommendersysteme in Form eines Expertensystems verwenden.  Der Experte kennt ein bestimmtes Gebiet der Software und generiert später die Empfehlung. Diese kann im Kontext des Lernens entweder ein Tipp zur Lösungsfindung sein oder aber auch die direkte Lösung zu einem Problem. Im Softwareumfeld kann dies besser differenziert werden. Entweder der Experte zeigt einen möglichen  Weg auf um das Problem zu beseitigen oder aber er erarbeitet mit dem Lernenden zusammen als Coach die Lösung des Problems. Diese beiden Möglichkeiten können mithilfe eines Recommendersystems begangen werden und werden in unserem dritten Lösungsansatz weiter vertieft.
 
 
-
-
-
-
 %% ===========================
 \chapter{Nutzer}
 Da unsere Arbeit die Adaption auf den Nutzer bezieht, müssen wir zuerst klären, welcher konkrete Nutzer bei unserer Arbeit in Frage kommt. Hierzu wollen wir die einzelnen Nutzerrollen der Zielsoftware mit deren Charakteristika vorstellen.
@@ -101,7 +97,27 @@ Die Studenten erhalten bei uns eine extra Klasse. Sie setzen die Software sehr s
 
 %% ==============
 \chapter{Lösungsansätze}
-Dieses Kapitel widmet sich den Lösungsansätzen, die als Grundlage für unsere abschließende Empfehlung dienen. Es handelt sich dabei um verschiedene Ansätze, die aufgrund unserer Nutzerklassifizierung und deren Ziele entstanden sind.
+Dieses Kapitel widmet sich den Lösungsansätzen, die als Grundlage für unsere abschließende Empfehlung dienen. Es handelt sich dabei um verschiedene Ansätze, die aufgrund unserer Nutzerklassifizierung und deren Ziele entstanden sind. Bevor wir die Lösungen vorstellen wollen wir auf die Bewertungskriterien eingehen, die für eine abschließende Bewertung der Lösungen von Bedeutung sind.
+\section{Bewertungskriterien}
+Abbildung \ref{img1:criteria} zeigt unsere Bewertungskriterien, die im Folgenden erläutert werden sollen.
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[width = 0.95\textwidth]{Kriterienbaum.png}
+\caption{Unsere Bewertungskriterien in einem Graphen dargestellt}
+\label{img1:criteria}
+\end{center}
+\end{figure} 
+
+\subsection{Begründung der Kriterien}
+\subsection{Wirtschaftlich}
+\subsubsection{Anfangskosten}
+\subsubsection{Wartungskosten}
+\subsubsection{Nutzen}
+\subsection{Technisch}
+\subsubsection{Wartbarkeit}
+\subsubsection{Datenschutz}
+\subsubsection{Usability}
+
 \section{Klassische Hilfe}
 Das klassische Hilfesystem soll unserer Klasse der Problemorientierten Nutzer weiterhelfen. Durch eine schnelle Lösungsfindung und Aufbereitung soll dem Nutzer geholfen werden.
 
@@ -141,8 +157,8 @@ Unser sogenanntes Expertensystem beruht auf einem Recommendersystem. Es soll, wi
 
 \chapter{Empfehlung}
 Unsere abschließende Empfehlung soll die Lösungsansätze anhand der Nutzerklassen und unserer Kriterien bewerten. Hierzu erfolgt jeweils eine Gegenüberstellung.
-\section{Bewertung der Lösungsansätze anhand der Nutzerklassen}
-\section{Bewertung der Lösungsansätze anhand der Kriterien}
+\section{Bewertung der Lösungsansätze anhand der aufgestellten Nutzerklassen}
+\section{Bewertung der Lösungsansätze anhand der aufgestellten Kriterien}
 
 \section{Konkrete Empfehlung}
 
